# sig_verifier

./: Cargo.toml
svc-a/: Cargo.toml
svc-a/src/: .account.rs.swp  .env  .main.rs.swo  account.rs  i_redis.rs  main.rs
svc-b/: .Cargo.toml.swp  .env  Cargo.toml
svc-b/src/: .main.rs.swo  i_redis.rs  main.rs  verification.rs
