[package]
name = "svc-a"
version = "0.1.0"
authors = ["John Halbert <john@fivemile.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.9.0"
oppgave = "*"
redis = "*"
reqwest = "0.11.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
