[package]
name = "svc-b"
version = "0.1.0"
authors = ["John Halbert <john@fivemile.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nacl = "0.5.3"
redis = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
